{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "e58eb0a5-c8c1-4978-ab05-b6192730cec7",
            "actions": [
                {
                    "name": "Moving Right",
                    "type": "Button",
                    "id": "252ce11e-24ee-445d-97b6-f6bc77de3e0d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Moving Left",
                    "type": "Button",
                    "id": "7f38e7d4-2d57-4b06-8c81-6f9139690621",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "f7655ffe-39ed-4bd6-84b4-d053fa4e6a1b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "90d74804-6e7e-4fdd-b328-40a6b704115e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d3234e24-fb70-48cd-90ab-bbd6755ad37b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2cf5a16-15bd-44f9-b133-47305536807d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Moving Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8910a3e-6cc7-42a9-962f-09d2e2eb5143",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6458f2cb-1379-473a-806b-357d848af924",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}